<resources>
    <string name="app_name">MagicQuiz</string>
    <string name="start">Начать</string>
    <string name="choose_theme">Choose theme!</string>
    <string name="nature">Природа</string>
    <string name="technology">Технологии</string>
    <string name="Literature">Литература</string>
    <string name="History">История</string>
    <string name="mathematics">Математика</string>
    <string name="choose_thems">Выберите тему викторины</string>
    <string name="simple">Легко</string>
    <string name="simple2">Лёгкий</string>
    <string name="middle">Средний</string>
    <string name="hard">Сложный</string>
    <string name="levels">Выберите уровень сложности</string>
    <string name="color_green">#00FF40</string>
    <string name="endText">Вы дали верных ответов:</string>
    <string name="to_start">В начало</string>
    <string name="statistic">Статистика</string>
</resources>
