<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameThems">

    <ImageView
        android:id="@+id/back_thems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_thems" />

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="29sp"
            android:textColor="#F0DE12"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/choose_thems"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:padding="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nature"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/nature"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/technology"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/technology"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/literature"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/Literature"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/history"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/History"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/mathematics"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/mathematics"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:padding="15dp"/>
    </GridLayout>

</RelativeLayout>