<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back_thems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_thems" />

    <LinearLayout
        android:id="@+id/levelsLayout"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_centerInParent="true"
        android:padding="12dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/endText"
            android:textAlignment="center"
            android:textColor="#F0DE12"
            android:textSize="33sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="80sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toStart"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/to_start"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/statistic"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/statistic"
            android:textColor="@color/colorBlack95"
            android:textSize="24sp"
            android:layout_marginBottom="25dp"
            android:padding="15dp"/>
    </LinearLayout>

</RelativeLayout>